// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`paragraphs - no markdown 1`] = `
[
  <p
    className="mantine-focus-auto paragraph m_b6d8b162 mantine-Text-root"
    style={{}}
  >
    <span>
      foo
    </span>
  </p>,
  <p
    className="mantine-focus-auto paragraph m_b6d8b162 mantine-Text-root"
    style={{}}
  >
    <span>
      bar
    </span>
  </p>,
]
`;

exports[`paragraphs - with markdown 1`] = `
[
  <p
    className="mantine-focus-auto paragraph m_b6d8b162 mantine-Text-root"
    style={{}}
  >
    <span>
      foo
      <a
        href="http://www.somesite.com/"
      >
        a link
      </a>
    </span>
  </p>,
  <p
    className="mantine-focus-auto paragraph m_b6d8b162 mantine-Text-root"
    style={{}}
  >
    <span>
      bar
    </span>
  </p>,
]
`;

exports[`plain text - no markdown 1`] = `
[
  <p
    className="mantine-focus-auto paragraph m_b6d8b162 mantine-Text-root"
    style={{}}
  >
    <span>
      hello world
    </span>
  </p>,
]
`;

exports[`with markdown 1`] = `
[
  <p
    className="mantine-focus-auto paragraph m_b6d8b162 mantine-Text-root"
    style={{}}
  >
    <span>
      <a
        href="http://www.somesite.com/"
      >
        a link
      </a>
       hello world
    </span>
  </p>,
]
`;
